<resources>
    <string name="app_name">FiMo</string>
    <string name="title">Atur Keuangan</string>
    <string name="desc">Atur keuanganmu dengan mudah di aplikasi Fimo</string>
    <string name="next">Next</string>
    <string name="gambar_ilustrasi">Ini Gambar Ilustrasi</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome_desc">Ayo manajemen keuanganmu mulai hari ini</string>
    <string name="username_confirm">Masukan Username</string>
    <string name="saldo">Masukkan Saldo</string>
    <string name="invalid">Data Harus Diisi</string>
    <string name="sukses">Berhasil Login</string>
    <string name="catat">Jangan lupa catat pengeluaranmu hari ini yaa</string>
    <string name="username">Hi, %1$s</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="hapus_data">Data Berhasil Dihapus</string>
    <string name="no_data">Anda Belum Memasukkan Data!</string>
    <string name="important_data">Anda harus mengisi pengeluaran</string>
    <string name="kategori">Kategori</string>
    <string name="pengeluaran">Jumlah Pengeluaran</string>
    <string name="tanggal">Tanggal</string>
    <string name="saldo_awal">Saldo Anda : %1$s</string>
    <string name="sisa_saldo">Sisa Saldo Anda : %1$s</string>
    <string name="surplus">Selamat, kamu berhasil menghemat</string>
    <string name="defisit">Wahh hari ini boros yaa. Saldonya udah minus nih</string>
    <string name="balance">Wah ngepas banget ya</string>
    <string name="tipe_pengeluaran">Hasilnya</string>
    <string name="desc_pengeluaran">Deskripsi</string>
    <string name="no_desc">Tidak ada deskripsi</string>
    <string name="dana_darurat">Dana Darurat</string>
    <string name="pengeluaran_bulanan">Pengeluaran Bulanan</string>
    <string name="status">Status</string>
    <string name="final_dana_darurat">Dana darurat yang dibutuhkan adalah : \n(belum menikah)</string>
    <string name="add_dana">Tambah Dana Darurat</string>
    <string name="result">%1$s</string>
    <string name="back">Kembali</string>
    <string name="keluar">Keluar</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="histori">Histori</string>
    <string name="copyright">Aplikasi FiMo adalah aplikasi keuangan dan perancangan keuangan dimana dapat menghitung cash flow, dana darurat serta dapat membagikannya ke catatan user. \n Copyright © 2023 Alfina Balqis Nurzaharani.</string>
    <string name="contoh">15 April 2022</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="bagikan">Bagikan</string>
</resources>